# Takkyu

./: CMakeLists.txt
src/: CMakeLists.txt  Game.cpp  Game.hpp  Main.cpp
src/Entity/: Ball.cpp  Ball.hpp  CMakeLists.txt  Entity.hpp  Paddle.cpp  Paddle.hpp
